--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -20,4 +20,6 @@
 
         <button type="submit">login</button>
     </form>
+
+    <p><a href="{{ path('app_forgot_password_request') }}">¿Olvidaste la contraseña?</a></p>
 {% endblock %}
