--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,9 +1,11 @@
-{# templates/login/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block body %}
+
+    <h1>Login</h1>
+
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
