--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Password Reset Email Sent{% endblock %}
 
 {% block body %}
+
+    <h1>Password Reset Email Sent</h1>
+    
     <p>
         If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
         This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
