Envía nuevo correo de verificación al modificar el email

--- a/templates/_menu.html.twig
+++ b/templates/_menu.html.twig
@@ -1,7 +1,8 @@
 <ul>
     <li><a href="{{ path('app_index') }}">Inicio</a></li>
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <li><a href="#"><strong>{{ app.user.email }}</strong></a></li>
+        <li><a href="{{ path('app_profile_show') }}">
+            <strong>{{ app.user.username ? app.user.username : app.user.email }}</strong></a></li>
         <li><a href="{{ path('logout') }}">Logout</a></li>
     {% else %}
         <li><a href="{{ path('login') }}">Login</a></li>
